syntax = "proto3";
package protobuf.http;
message MutilOperateToRecyclebinC{
	int32 hOpCode=1;
	repeated string userFileIds=2;
	repeated string userFoldIds=3;
}
message MutilOperateToRecyclebinS{
	int32 hOpCode=1;
}
message MutilOperateOffRecyclebinC{
	int32 hOpCode=1;
	repeated string userFileIds=2;
	repeated string userFoldIds=3;
}
message MutilOperateOffRecyclebinS{
	int32 hOpCode=1;
}
message MutilOperateMoveToC{
	int32 hOpCode=1;
	repeated string userFileIds=2;
	repeated string userFoldIds=3;
	string userFoldParentId=4;//不能为空
}
message MutilOperateMoveToS{
	int32 hOpCode=1;
}
message MutilOperateRemoveC{
	int32 hOpCode=1;
	repeated string userFileIds=2;
	repeated string userFoldIds=3;
}
message MutilOperateRemoveS{
	int32 hOpCode=1;
}
message MutilOperateClearRecyclebinC{
	int32 hOpCode=1;
	string userFoldTopId=2;
}
message MutilOperateClearRecyclebinS{
	int32 hOpCode=1;
}